2008-02-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dired.el (dired-mark-prompt): Don't count/display the t element.
	Reported by Carsten Blaauw <it-media.blaauw@daimler.com>.

2008-02-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/verilog-mode.el (eval-when-compile): Don't define
	add-submenu.
	(verilog-xemacs-menu): Add :keys for C-M-a, C-M-e and C-M-h.
	Remove.  Move contents to the only use ...
	(verilog-menu): ... here.
	(verilog-statement-menu): Remove.  Move contents to the only use ...
	(verilog-stmt-menu): ... here.
	(verilog-mark-defun): Simply call mark-defun for emacs.
	(occur-pos-list): Declare for byte compiler.
	(mode-popup-menu): Don't defvar.
	(verilog-add-statement-menu): Remove.
	(verilog-mode-hook): Don't add verilog-add-statement-menu.
	(verilog-mode): Call easy-menu-add and set mode-popup-menu for
	XEmacs.

2008-02-24  Michael McNamara  <mac@mail.brushroad.com>

	* progmodes/verilog-mode.el (verilog-xemacs-menu): Remove XEmacs
	conditional.
	(verilog-font-grouping-keywords-face): Make the begin..end
	keywords standout more than other verilog keywords.
        (verilog-type-font-keywords): Move the begin..end out of this list
	to facilitate making them to (potentially) stand out more.
	(verilog-backward-token): Fix indent of bare always{_*}?, initial,
	function & task blocks.
        (verilog-behavioral-block-beg-re): Fix indent of bare always{_*}?,
	initial, function & task blocks.
	(verilog-forward-sexp): Handle the new "disable fork" statement of
	IEEE-1800 Verilog.
        (verilog-beg-block-re-ordered): Handle the new "disable fork"
	statement of IEEE-1800 Verilog.
        (verilog-calc-1): Handle the new "disable fork" statement of
	IEEE-1800 Verilog.
        (verilog-disable-fork-re): Add const to help handle the new
	"disable fork" statement of IEEE-1800 Verilog.
	(verilog-declaration-core-re): Add port directions by themselves,
	with no qualification, as base item of a declaration.